--- a/package.json
+++ b/package.json
@@ -14,5 +14,9 @@
     "core-js": "^3.6.5",
     "nuxt": "^2.14.5"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "fibers": "^5.0.0",
+    "sass": "^1.32.2",
+    "sass-loader": "^10.1.0"
+  }
 }
