--- a/package.json
+++ b/package.json
@@ -12,9 +12,7 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5",
-    "swiper": "^7.0.6",
-    "vue-awesome-swiper": "^4.1.1"
+    "nuxt": "^2.14.5"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
