--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@nuxtjs/axios": "^5.12.2",
     "@nuxtjs/pwa": "^3.0.2",
     "core-js": "^3.6.5",
-    "nuxt": "^2.14.5"
+    "nuxt": "^2.14.5",
+    "vue": "^2.6.14",
+    "vue-material-design-icons": "^4.13.0"
   },
   "devDependencies": {
     "fibers": "^5.0.0",
